--- a/index.html
+++ b/index.html
@@ -3,59 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="assets/img/logo_bulldog.jpg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/style.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <title>Les bulldogs</title>
 </head>
-<body>
-    <header id="accueil">
-      <nav class="navbar bg-dark navbar-dark p-3">
-          <div class="container">
-              
-          </div>
-      </nav>
-  </header>
-  <nav class="navbar bg-dark navbar-dark navbar-expand-md sticky-top">
-    <div class="container-fluid">
-      <div class="navbar-brand">
-        <p> <span class="text-bold text-danger">SOS</span>  
-        <img class="logo" src="assets/img/logo_bulldog.jpg" alt="Logo association">
-        Boubous
-      </p>
-      </div>
-      <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarText">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div id="navbarText" class="collapse navbar-collapse">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" href="#accueil">Accueil</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#evenement">Evenements</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#adoption">Adoption</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="choixConseils" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Conseils
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="choixConseils">
-              <li><a class="dropdown-item" href="#">Soins</a></li>
-              <li><a class="dropdown-item" href="#">Alimentation</a></li>
-              <li><a class="dropdown-item" href="#">Hygiene</a></li>
-              <li><a class="dropdown-item" href="#">Dressage</a></li>
+<body>    
+  <header id="accueil" class="sticky-top">
+    <nav class="navbar bg-dark navbar-dark navbar-expand-md p-3">
+        <div class="container-fluid">
+        <div class="navbar-brand">
+            <p> <span class="text-bold text-danger">SOS</span>  
+            <img class="logo" src="assets/img/logo_bulldog.jpg" alt="Logo association">
+            Boubous
+        </p>
+        </div>
+        <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarText">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div id="navbarText" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+            <li class="nav-item">
+                <a class="nav-link active" href="#accueil">Accueil</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#evenement">Evenements</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#adoption">Adoption</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="choixConseils" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Conseils
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="choixConseils">
+                <li><a class="dropdown-item" href="#">Soins</a></li>
+                <li><a class="dropdown-item" href="#">Alimentation</a></li>
+                <li><a class="dropdown-item" href="#">Hygiene</a></li>
+                <li><a class="dropdown-item" href="#">Dressage</a></li>
+                </ul>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
+            </li>
             </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#contact">Contact</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+        </div>
+        </div>
+    </nav>
+</header>
   <div class="text-white py-5" style="background: center/cover url('assets/img/bulldog_banniere.jpg')">
     <div id="presentation" class="container">
         <h1 class="display-4">Bienvenue.</h1>
@@ -95,8 +91,8 @@
               </p>
           </div>
       </section>
-      <section class="bg-dark text-white" id="evenement">
-        <div class="infoEvenements">
+      <section class="bg-dark text-white Evenements" id="evenement">
+        <div class="colonneEvenements">
           <h3>Salon du bouledogue</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam aliquam recusandae officiis dolorem eum facere tempora cum laborum voluptates soluta.
@@ -108,7 +104,7 @@
         <div>
           <img src="assets/img/Anim_bdf.gif" alt="chien annimé">
         </div>
-        <div class="infoEvenements">
+        <div class="colonneEvenements">
           <h3>Exposition 2022</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus accusamus veniam doloremque iste nostrum id voluptatem velit alias ipsum recusandae?
