Modification du responsive & optimisation

--- a/index.html
+++ b/index.html
@@ -52,28 +52,28 @@
         </div>
     </nav>
 </header>
-  <div class="text-white py-5" style="background: center/cover url('assets/img/bulldog_banniere.jpg')">
-    <div id="presentation" class="container">
+  <div class="text-white py-5 banniere-dog">
+    <div id="presentation" class="container presentation">
         <h1 class="display-4">Bienvenue.</h1>
         <p>SOS Boubous, l'association dédiée aux bouldogues et à leurs propriétaires.
             <span class="badge bg-success">Des éleveurs en ligne.</span></p>
     </div>
   </div>
   <h2 class="titre-section">A SAVOIR ...</h2>
-      <section class="section-info" id="info">
+      <section class="info" id="info">
          
-          <div class="carte-info">
-              <div class="container-photo-info">
+          <div class="info-card">
+              <div class="info-container">
                   <img src="assets/img/bouledogue2.jpg" alt="Manger">
               </div>
               <h2>Des ventres sur pattes</h2>
               <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima labore repudiandae, quae nostrum qui explicabo!
               </p>
-              <img src="assets/img/points.png" alt="décoration petit points noirs" class="deco-infos">
+              <img src="assets/img/points.png" alt="décoration petit points noirs" class="info-deco">
           </div>
-          <div class="carte-info">
-              <div class="container-photo-info">
+          <div class="info-card">
+              <div class="info-container">
                   <img src="assets/img/bouledogue3.jpg" alt="Jouer">
               </div>
               <h2>Ils adorent jouer</h2>
@@ -81,8 +81,8 @@
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima labore repudiandae, quae nostrum qui explicabo!
               </p>
           </div>
-          <div class="carte-info">
-              <div class="container-photo-info">
+          <div class="info-card">
+              <div class="info-container">
                   <img src="assets/img/bouledogue1.jpg" alt="Dormir">
               </div>
               <h2>Ils dorment au chaud</h2>
